<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/category_setting_title">
        <EditTextPreference android:key="text_format"
            android:title="@string/setting_text"
            android:dialogTitle="@string/setting_text_dialogTitle"
            android:dialogMessage="@string/setting_text_dialogMessage"
            android:defaultValue="@string/setting_text_defaultValue" />
        <com.exiashio.BatteryStatusText.TextColorPreference
            android:key="text_color2"
            android:title="@string/setting_text_color"
            android:dialogTitle="@string/setting_text_color_dialogTitle"
            android:defaultValue="0xff000000" />
        <com.exiashio.BatteryStatusText.TextSizePreference android:key="text_size"
            android:title="@string/setting_text_size"
            android:dialogTitle="@string/setting_text_size_dialogTitle"
            android:defaultValue="14" />
    </PreferenceCategory>
</PreferenceScreen>
